# proxmox-mcp

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
deploy/: install.sh  proxmox-mcp.service  redeploy.sh
examples/: config.toml
src/proxmox_mcp/: __init__.py  approval_store.py  audit.py  auth.py  cli.py  config.py  guest_exec.py  policy.py  proxmox_api.py  server.py  validation.py
src/proxmox_mcp/tools/: __init__.py
tests/: test_approval_store.py  test_audit.py  test_auth.py  test_cli.py  test_config.py  test_guest_exec.py  test_policy.py  test_proxmox_api.py  test_server_http.py  test_server_requests.py  test_server_tls.py  test_tools.py  test_validation.py
