[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proxmox-mcp-server"
version = "0.1.0"
description = "Remote MCP server for Proxmox VE with approval-gated access"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ivan Senyk" }
]
dependencies = []

[project.scripts]
proxmox-mcp-server = "proxmox_mcp.cli:run_server"
proxmox-mcpctl = "proxmox_mcp.cli:run_admin"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
